# ocssw_src

./: .gitignore  .last_version  gitignore  install_ocssw.json  readme.md
ocssw_src/: .astylerc  .clang-format  .gitattributes-seadas-archive  .gitlab-ci.yml  .manifest_tag  .vimrc.local  CMakeLists.txt  OCSSW.env  README.md  get_lib3_src.sh  manifest.json
ocssw_src/.gitlab/issue_templates/: code_cleanup.md
ocssw_src/cmake/Modules/: FindMapi.cmake  FindOCSSWTest.cmake  FindPGSTK.cmake  FindSDST.cmake  Findcminpack.cmake
ocssw_src/include/: focs.hpp
ocssw_src/include/ViirsCal/: Calibrate_Viirs_Connector.h  VcstCalLutInputItem.h  VcstCalNetcdfInputItem.h  VcstObc.h  VcstViirsBand.h  VcstViirsBandDnb.h  VcstViirsBandImg.h  VcstViirsBandMod.h  VcstViirsBandModDG.h  VcstViirsCal.h  VcstViirsThermal.h
ocssw_src/include/ViirsCmn/: VcstCalLutStructures.h  VcstCmnConsts.h  VcstCmnGeo.h  VcstCmnGeoEclipse.h  VcstCmnGeoStructs.h  VcstCmnLutInputItem.h  VcstDegRadConvertor.h  VcstFloatCompare.h  VcstGetSensorId.h  VcstLogger.h  VcstLutInputItem.h  VcstMath.h  VcstParamsReader.h  VcstPolarWanderItem.h  VcstTime.h  VcstViirsStructs.h
ocssw_src/include/ViirsGeo/: ObpgReadGrid.h  VcstCalculateGridCenter.h  VcstGeoAncInputItem.h  VcstGeoDataStructs.h  VcstGeoLutInputItem.h  VcstGeoNetcdfInputItem.h  VcstGeoParameters.h  VcstGeoRctngl.h  VcstGeoRctnglStruct.h  VcstMapDataSet.h  VcstPolarStereographicDataSet.h  VcstPolarTileDatabase.h  VcstTerrainCorrect.h  VcstTileDatabase.h  VcstViirsGeo.h  Vcst_earth_radius.h  mds.h
ocssw_src/include/ViirsRice/: rice.h  ricehdf.h
ocssw_src/include/focs/: Common.hpp  Configuration.hpp  DatFile.hpp  DataProvider.hpp  DataRecord.hpp  FileReader.hpp  FileWriter.hpp  FilterIterator.hpp  Interpolation.hpp  KvStore.hpp  LeapSecondDatabase.hpp  Log.hpp  Module.hpp  ModuleManager.hpp  NVector.hpp  Product.hpp  RuntimeAttributes.hpp  ShareTree.hpp  Stopwatch.hpp  StringUtils.hpp  TimePoint.hpp  Variable.hpp  Version.hpp
ocssw_src/include/novas/: jplint.h  novas.h
ocssw_src/oel_hdf4/: CMakeLists.txt  README.md
ocssw_src/oel_hdf4/filetype/: CMakeLists.txt  Changelog.md  filetype.c  filetype.cpp  filetype.h  filetypeXml.cpp
ocssw_src/oel_hdf4/h5io/: CMakeLists.txt  h5io.c  h5io.h
ocssw_src/oel_hdf4/libbilio/: CMakeLists.txt  aviris.h  jplaeriallib.c  jplaeriallib.h  prism.h  read_aviris.c  read_prism.c
ocssw_src/oel_hdf4/libbin/: CMakeLists.txt  Changelog.md  L3File.cpp  L3File.h  L3FileSMI.cpp  L3FileSMI.h  L3Shape.cpp  L3Shape.h  L3ShapeIsine.cpp  L3ShapeIsine.h  L3ShapeSMI.cpp  L3ShapeSMI.h  bin_csub.c  bin_io.cpp  bin_util.cpp  bin_util.h  get_beg_ext.c  hdf_bin.h  meta_l3b.h  ncdfbin_utils.c  ncdfbin_utils.h  read_l3b_meta.c  seaproto.h  wr_vdata.c  write_l3b_meta.c
ocssw_src/oel_hdf4/libczcs/: CMakeLists.txt  Changelog.md
ocssw_src/oel_hdf4/libdfutils/: CMakeLists.txt  Changelog.md  dfutils.h  scale_sds.c  wrapper.c
ocssw_src/oel_hdf4/libgoci/: CMakeLists.txt  Changelog.md  goci.c  goci.h  goci_slot.c
ocssw_src/oel_hdf4/libh4metadata/: CMakeLists.txt  Changelog.md  granule_extract_metadata.c  granule_extract_metadata.h
ocssw_src/oel_hdf4/libhdf4utils/: CMakeLists.txt  Changelog.md  hdf4_utils.c  hdf4utils.h  hdf_utils.c
ocssw_src/oel_hdf4/libhdf5utils/: CMakeLists.txt  Changelog.md  hdf5util.cpp  hdf5utils.h
ocssw_src/oel_hdf4/libl1/: CMakeLists.txt  alloc_l1.c  brightness.c  calibrate_viirs.c  calibrate_viirs.h  cloud_flag.c  filehandle.h  filehandle_init.c  filehdr_struc.h  ftrim.c  geom_per_band.c  get_f0.c  getglint.c  glint.h  init_l1.c  l1.h  l1_aci.c  l1_aci.h  l1_aviris.c  l1_aviris.h  l1_aviris_nc.c  l1_aviris_struc.h  l1_czcs.c  l1_czcs.h  l1_czcs_netcdf.cpp  l1_czcs_netcdf.h  l1_generic_write.c  l1_goci.c  l1_goci.h  l1_hawkeye.c  l1_hawkeye.h  l1_hdf_generic_read.c  l1_hdf_generic_read.h  l1_hdf_generic_write.c  l1_hico.c  l1_hico.h  l1_input.h  l1_io.c  l1_l1c.c  l1_l1c.cpp  (+90 more)
ocssw_src/oel_hdf4/libmeris/: CMakeLists.txt  Changelog.md  epr_api.h  epr_band.c  epr_band.h  epr_bitmask.h  epr_core.h  epr_dataset.h  epr_dddb.h  epr_dsd.h  epr_field.h  epr_msph.h  epr_param.h  epr_ptrarray.h  epr_record.h  epr_string.h  epr_swap.h
ocssw_src/oel_hdf4/libnav/: CMakeLists.txt  Changelog.md  asap_rot_int.f  compute_alpha.c  compute_alpha.h  compute_dist.c  crossp.c  ephparms.c  esdist.c  filenv.f  ftn_interface.c  get_ut1.f  get_zenaz.c  getenv.cpp  gha2000.c  l_sun.c  l_sun.cpp  libnav.h  math_utils.c  math_utils.h  nav.c  nav.h  nutate.c  ocorient.c  ocorient.h  sun2000.c  sun2000.cpp  sun2000.h  sunangs.c
ocssw_src/oel_hdf4/liboli/: CMakeLists.txt  Changelog.md  alberfor.c  alberinv.c  alconfor.c  alconinv.c  azimfor.c  aziminv.c  br_gctp.c  emeta.h  emeta_exploit.c  eqconfor.c  eqconinv.c  equifor.c  equiinv.c  for_init.c  gctp.c  gctp.h  gctp_create_transformation.c  gctp_dms2degrees.c  gctp_print_message.c  gctp_report.c  gctp_transform.c  gctp_utility.c  geographic.c  get_l57tm_nom_angles.c  get_l8_angles.c  get_oli_nom_angles.c  gnomfor.c  gnominv.c  goodfor.c  goodinv.c  gvnspfor.c  gvnspinv.c  hamfor.c  haminv.c  imolwfor.c  imolwinv.c  inv_init.c  isinfor.c  (+51 more)
ocssw_src/oel_hdf4/libosmi/: CMakeLists.txt  Changelog.md  InstStatData.h  cal_l1a_osmi.h  calday.c  calibrate_l1a_osmi.c  call1a_proto_osmi.h  ctogd.c  ctotc.c  eanom.c  earth.h  get_cal_misc_osmi.c  get_cal_osmi.c  get_cal_osmi.h  getcal_proto_osmi.h  gmha.c  julian.c  locate.c  lunsol.h  obliq.c  orbit.h  sunpos.c  tconv.c  time-utils.c
ocssw_src/oel_hdf4/libseawifs/: CMakeLists.txt  Changelog.md  GetStationInfo.c  GetStationInfo.h  SeaWiFS.h  WIFSHDF.h  WIFSHDF_proto.h  cal_l1a.h  calibrate_l1a.c  call1a_proto.h  cdl_object.h  cdl_object_proto.h  cf.h  config.h  datatype.h  datatype_proto.h  ecv.h  eng_qual.h  eng_qual_proto.h  ffm.h  gac_st.c  get_cal.c  get_cal.h  get_cal_misc.c  get_cal_swf.c  getcal_proto.h  hdf_object.h  hdf_object_proto.h  l1a.c  l1a.h  l1a_proto.h  l2_flags_proto.h  l2_flags_sw.h  lac_st.c  level_1a_index.h  objmax.h  (+11 more)
ocssw_src/oel_util/: CMakeLists.txt  README.md
ocssw_src/src/: CMakeLists.txt
ocssw_src/test/: CMakeLists.txt
(+1849 files in other folders)
